infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
      # kubernetes.io/ingress.class: nginx
      # nginx.ingress.kubernetes.io/use-regex: 'true'
      
      service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
      service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.highbred.xyz'
spec:
  rules:
    - host: www.highbred.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000              
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000      
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
